# Dictionary_Fast_Api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  db.py  main.py
app/core/: config.py  error_handlers.py
app/exceptions/: dictionary.py  openai.py
app/middleware/: gzip.py  request_logging.py  setup.py
app/models/: __init__.py  enums.py  word.py
app/routes/: api.py  pages.py  responses.py
app/schemas/: __init__.py  word.py
app/services/: dictionary.py  openai_service.py
backend/: .env.example  Dockerfile  README.md  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 4629186736bf_create_words_and_translation_options.py  c72b9f6e1a44_add_word_constraints_origin_and_updated_at.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  db.py  error_handlers.py
backend/app/exceptions/: __init__.py  database.py  dictionary.py  openai.py
backend/tests/: conftest.py  factories.py  fakes.py
docs/: architecture.md
frontend/: .dockerignore  .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: env.ts
tests/: conftest.py  factories.py  fakes.py  test_api_endpoints.py  test_dictionary_service.py  test_lookup_or_create_word.py  test_openai_service.py  test_slug_utils.py
tests/api/: test_health_api.py  test_words_api.py
tests/integration/: test_postgres_integration.py
tests/unit/: test_lookup_or_create_word.py  test_openai_service.py
(+24 files in other folders)
